# kafka-stig-audit

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  README.md  SECURITY.md  audit.py  pyproject.toml  runner.py
.github/workflows/: release.yml  test.yml
benchmarks/: CIS_Apache_Kafka_Container_Benchmark_v1.0.md
checks/: __init__.py  auth.py  authz.py  container.py  cve_scanner.py  encryption.py  logging_checks.py  network.py  zookeeper.py
docs/: CVE_SCANNING.md  RUN_BENCHMARK.md
mappings/: CMMC-compliance-matrix.csv  MITRE-mappings.csv  frameworks.py
output/: bundle.py  report.py  sarif.py
test/: test_auth.py  test_authz.py  test_encryption.py  test_logging.py  test_network.py  test_runner.py  test_zookeeper.py
